name:                ScannerArithExpr
version:             0.1.0.0
synopsis:            A scanner for arithemtic expressions
description:         see README.md
homepage:            http://ob.cs.hm.edu/lectures/compiler.html
license:             BSD3
license-file:        LICENSE
author:              Oliver Braun
maintainer:          ob@cs.hm.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable scanner
  hs-source-dirs:    app
  main-is:           Main.hs
  build-depends:     base
                   , ScannerArithExpr
  default-language:  Haskell2010

library
  hs-source-dirs:    src
  exposed-modules:   Scanner
                   , Types
  build-depends:     base
                  , regex-pcre
  default-language:  Haskell2010

test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:     ScannerSpec
  Build-depends:     base
                   , ScannerArithExpr
                   , hspec
                   , QuickCheck
  default-language:  Haskell2010
  ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded
               -fno-warn-unused-do-bind
